NIVision/NativeCameraServer/nivision.h

    #define imaqMakePoint imaqMakePoint_BC
    #define imaqMakePointFloat imaqMakePointFloat_BC
    #define imaqMakePoint imaqMakePoint_BC
    #define imaqMakePointFloat imaqMakePointFloat_BC
typedef enum WindowThreadPolicy_enum {
    IMAQ_CALLING_THREAD                  = 0,           
    IMAQ_SEPARATE_THREAD                 = 1,           
    IMAQ_WINDOW_THREAD_POLICY_SIZE_GUARD = 0xFFFFFFFF   
} WindowThreadPolicy;
typedef enum WindowEventType_enum {
    IMAQ_NO_EVENT                     = 0,           
    IMAQ_CLICK_EVENT                  = 1,           
    IMAQ_DRAW_EVENT                   = 2,           
    IMAQ_MOVE_EVENT                   = 3,           
    IMAQ_SIZE_EVENT                   = 4,           
    IMAQ_SCROLL_EVENT                 = 5,           
    IMAQ_ACTIVATE_EVENT               = 6,           
    IMAQ_CLOSE_EVENT                  = 7,           
    IMAQ_DOUBLE_CLICK_EVENT           = 8,           
    IMAQ_WINDOW_EVENT_TYPE_SIZE_GUARD = 0xFFFFFFFF   
} WindowEventType;
typedef enum Tool_enum {
    IMAQ_NO_TOOL              = -1,          
    IMAQ_SELECTION_TOOL       = 0,           
    IMAQ_POINT_TOOL           = 1,           
    IMAQ_LINE_TOOL            = 2,           
    IMAQ_RECTANGLE_TOOL       = 3,           
    IMAQ_OVAL_TOOL            = 4,           
    IMAQ_POLYGON_TOOL         = 5,           
    IMAQ_CLOSED_FREEHAND_TOOL = 6,           
    IMAQ_ANNULUS_TOOL         = 7,           
    IMAQ_ZOOM_TOOL            = 8,           
    IMAQ_PAN_TOOL             = 9,           
    IMAQ_POLYLINE_TOOL        = 10,          
    IMAQ_FREEHAND_TOOL        = 11,          
    IMAQ_ROTATED_RECT_TOOL    = 12,          
    IMAQ_ZOOM_OUT_TOOL        = 13,          
    IMAQ_TOOL_SIZE_GUARD      = 0xFFFFFFFF   
} Tool;
typedef enum MathTransformMethod_enum {
    IMAQ_TRANSFORM_LINEAR                 = 0,           
    IMAQ_TRANSFORM_LOG                    = 1,           
    IMAQ_TRANSFORM_EXP                    = 2,           
    IMAQ_TRANSFORM_SQR                    = 3,           
    IMAQ_TRANSFORM_SQRT                   = 4,           
    IMAQ_TRANSFORM_POWX                   = 5,           
    IMAQ_TRANSFORM_POW1X                  = 6,           
    IMAQ_MATH_TRANSFORM_METHOD_SIZE_GUARD = 0xFFFFFFFF   
} MathTransformMethod;
typedef enum PaletteType_enum {
    IMAQ_PALETTE_GRAY            = 0,           
    IMAQ_PALETTE_BINARY          = 1,           
    IMAQ_PALETTE_GRADIENT        = 2,           
    IMAQ_PALETTE_RAINBOW         = 3,           
    IMAQ_PALETTE_TEMPERATURE     = 4,           
    IMAQ_PALETTE_USER            = 5,           
    IMAQ_PALETTE_TYPE_SIZE_GUARD = 0xFFFFFFFF   
} PaletteType;
typedef enum ColorMode_enum {
    IMAQ_RGB                   = 0,           
    IMAQ_HSL                   = 1,           
    IMAQ_HSV                   = 2,           
    IMAQ_HSI                   = 3,           
    IMAQ_CIE                   = 4,           
    IMAQ_CIEXYZ                = 5,           
    IMAQ_COLOR_MODE_SIZE_GUARD = 0xFFFFFFFF   
} ColorMode;
typedef enum MappingMethod_enum {
    IMAQ_FULL_DYNAMIC              = 0,           
    IMAQ_DOWNSHIFT                 = 1,           
    IMAQ_RANGE                     = 2,           
    IMAQ_90_PCT_DYNAMIC            = 3,           
    IMAQ_PERCENT_RANGE             = 4,           
    IMAQ_DEFAULT_MAPPING           = 10,          
    IMAQ_MOST_SIGNIFICANT          = 11,          
    IMAQ_FULL_DYNAMIC_ALWAYS       = 12,          
    IMAQ_DOWNSHIFT_ALWAYS          = 13,          
    IMAQ_RANGE_ALWAYS              = 14,          
    IMAQ_90_PCT_DYNAMIC_ALWAYS     = 15,          
    IMAQ_PERCENT_RANGE_ALWAYS      = 16,          
    IMAQ_MAPPING_METHOD_SIZE_GUARD = 0xFFFFFFFF   
} MappingMethod;
typedef enum KernelFamily_enum {
    IMAQ_GRADIENT_FAMILY          = 0,           
    IMAQ_LAPLACIAN_FAMILY         = 1,           
    IMAQ_SMOOTHING_FAMILY         = 2,           
    IMAQ_GAUSSIAN_FAMILY          = 3,           
    IMAQ_KERNEL_FAMILY_SIZE_GUARD = 0xFFFFFFFF   
} KernelFamily;
typedef enum MulticoreOperation_enum {
    IMAQ_GET_CORES                      = 0,           
    IMAQ_SET_CORES                      = 1,           
    IMAQ_USE_MAX_AVAILABLE              = 2,           
    IMAQ_MULTICORE_OPERATION_SIZE_GUARD = 0xFFFFFFFF   
} MulticoreOperation;
typedef enum SegmentationDistanceLevel_enum {
    IMAQ_SEGMENTATION_LEVEL_CONSERVATIVE = 0,           
    IMAQ_SEGMENTATION_LEVEL_AGGRESSIVE   = 1,           
    IMAQ_SEGMENTATION_LEVEL_SIZE_GUARD   = 0xFFFFFFFF   
} SegmentationDistanceLevel;
typedef enum WindowBackgroundFillStyle_enum {
    IMAQ_FILL_STYLE_SOLID      = 0,           
    IMAQ_FILL_STYLE_HATCH      = 2,           
    IMAQ_FILL_STYLE_DEFAULT    = 3,           
    IMAQ_FILL_STYLE_SIZE_GUARD = 0xFFFFFFFF   
} WindowBackgroundFillStyle;
typedef enum WindowBackgroundHatchStyle_enum {
    IMAQ_HATCH_STYLE_HORIZONTAL        = 0,           
    IMAQ_HATCH_STYLE_VERTICAL          = 1,           
    IMAQ_HATCH_STYLE_FORWARD_DIAGONAL  = 2,           
    IMAQ_HATCH_STYLE_BACKWARD_DIAGONAL = 3,           
    IMAQ_HATCH_STYLE_CROSS             = 4,           
    IMAQ_HATCH_STYLE_CROSS_HATCH       = 5,           
    IMAQ_HATCH_STYLE_SIZE_GUARD        = 0xFFFFFFFF   
} WindowBackgroundHatchStyle;
typedef struct Image_struct Image;
typedef struct ROI_struct ROI;
typedef struct ClassifierSession_struct ClassifierSession;
typedef struct PointFloat_struct PointFloat;
typedef struct RGBValue_struct RGBValue;
typedef struct ROILabel_struct ROILabel;
typedef struct SupervisedColorSegmentationReport_struct SupervisedColorSegmentationReport;
typedef struct ColorSegmenationOptions_struct ColorSegmenationOptions;
typedef struct CIEXYZValue_struct CIEXYZValue;
typedef struct Rect_struct Rect;
typedef struct Point_struct Point;
typedef struct Annulus_struct Annulus;
typedef struct DisplayMapping_struct DisplayMapping;
typedef struct BCGOptions_struct BCGOptions;
typedef struct ColorHistogramReport_struct ColorHistogramReport;
typedef struct Range_struct Range;
typedef struct RotatedRect_struct RotatedRect;
typedef struct PointFloat_struct {
    float x; 
    float y; 
} PointFloat;
typedef struct RGBValue_struct {
    unsigned char B;     
    unsigned char G;     
    unsigned char R;     
    unsigned char alpha; 
} RGBValue;
typedef struct ROILabel_struct {
    char*        className; 
    unsigned int label;     
} ROILabel;
typedef struct SupervisedColorSegmentationReport_struct {
    ROILabel*    labelOut;    
    unsigned int numLabelOut; 
} SupervisedColorSegmentationReport;
typedef struct ColorSegmenationOptions_struct {
    unsigned int windowX;         
    unsigned int windowY;         
    unsigned int stepSize;        
    unsigned int minParticleArea; 
    unsigned int maxParticleArea; 
    short        isFineSegment;   
} ColorSegmenationOptions;
typedef struct CIEXYZValue_struct {
    double        Z;     
    double        Y;     
    double        X;     
    unsigned char alpha; 
} CIEXYZValue;
typedef struct Rect_struct {
    int top;    
    int left;   
    int height; 
    int width;  
} Rect;
typedef struct Point_struct {
    int x; 
    int y; 
} Point;
typedef struct Annulus_struct {
    Point  center;      
    int    innerRadius; 
    int    outerRadius; 
    double startAngle;  
    double endAngle;    
} Annulus;
typedef struct DisplayMapping_struct {
    MappingMethod method;       
    int           minimumValue; 
    int           maximumValue; 
    int           shiftCount;   
} DisplayMapping;
typedef struct BCGOptions_struct {
    float brightness; 
    float contrast;   
    float gamma;      
} BCGOptions;
typedef struct ColorHistogramReport_struct {
    HistogramReport plane1; 
    HistogramReport plane2; 
    HistogramReport plane3; 
} ColorHistogramReport;
typedef struct Range_struct {
    int minValue; 
    int maxValue; 
} Range;
typedef struct RotatedRect_struct {
    int    top;    
    int    left;   
    int    height; 
    int    width;  
    double angle;  
} RotatedRect;
IMAQ_FUNC ColorHistogramReport*              IMAQ_STDCALL imaqColorHistogram2(Image* image, int numClasses, ColorMode mode, const CIEXYZValue* whiteReference, Image* mask);
IMAQ_FUNC int                                IMAQ_STDCALL imaqColorLookup(Image* dest, const Image* source, ColorMode mode, const Image* mask, const short* plane1, const short* plane2, const short* plane3);
IMAQ_FUNC int                                IMAQ_STDCALL imaqColorThreshold(Image* dest, const Image* source, int replaceValue, ColorMode mode, const Range* plane1Range, const Range* plane2Range, const Range* plane3Range);
IMAQ_FUNC SupervisedColorSegmentationReport* IMAQ_STDCALL imaqSupervisedColorSegmentation(ClassifierSession* session, Image* labelImage, const Image* srcImage, const ROI* roi, const ROILabel* labelIn, unsigned int numLabelIn, int maxDistance, int minIdentificationScore, const ColorSegmenationOptions* segmentOptions);
IMAQ_FUNC int                                IMAQ_STDCALL imaqGetColorSegmentationMaxDistance(ClassifierSession* session, const ColorSegmenationOptions* segmentOptions, SegmentationDistanceLevel distLevel, int* maxDistance);
IMAQ_FUNC int IMAQ_STDCALL imaqBCGTransform(Image* dest, const Image* source, const BCGOptions* options, const Image* mask);
IMAQ_FUNC int IMAQ_STDCALL imaqEqualize(Image* dest, const Image* source, float min, float max, const Image* mask);
IMAQ_FUNC int IMAQ_STDCALL imaqInverse(Image* dest, const Image* source, const Image* mask);
IMAQ_FUNC int IMAQ_STDCALL imaqMathTransform(Image* dest, const Image* source, MathTransformMethod method, float rangeMin, float rangeMax, float power, const Image* mask);
IMAQ_FUNC int IMAQ_STDCALL imaqWatershedTransform(Image* dest, const Image* source, int connectivity8, int* zoneCount);
IMAQ_FUNC int IMAQ_STDCALL imaqLookup2(Image* dest, const Image* source, const int* table, const Image* mask);
IMAQ_FUNC int   IMAQ_STDCALL imaqAreScrollbarsVisible(int windowNumber, int* visible);
IMAQ_FUNC int   IMAQ_STDCALL imaqBringWindowToTop(int windowNumber);
IMAQ_FUNC int   IMAQ_STDCALL imaqGetMousePos(Point* position, int* windowNumber);
IMAQ_FUNC int   IMAQ_STDCALL imaqGetWindowBackground(int windowNumber, WindowBackgroundFillStyle* fillStyle, WindowBackgroundHatchStyle* hatchStyle, RGBValue* fillColor, RGBValue* backgroundColor);
IMAQ_FUNC int   IMAQ_STDCALL imaqGetWindowDisplayMapping(int windowNum, DisplayMapping* mapping);
IMAQ_FUNC int   IMAQ_STDCALL imaqGetWindowGrid(int windowNumber, int* xResolution, int* yResolution);
IMAQ_FUNC int   IMAQ_STDCALL imaqGetWindowHandle(int* handle);
IMAQ_FUNC int   IMAQ_STDCALL imaqGetWindowPos(int windowNumber, Point* position);
IMAQ_FUNC int   IMAQ_STDCALL imaqGetWindowSize(int windowNumber, int* width, int* height);
IMAQ_FUNC char* IMAQ_STDCALL imaqGetWindowTitle(int windowNumber);
IMAQ_FUNC int   IMAQ_STDCALL imaqGetWindowZoom2(int windowNumber, float* xZoom, float* yZoom);
IMAQ_FUNC int   IMAQ_STDCALL imaqIsWindowNonTearing(int windowNumber, int* nonTearing);
IMAQ_FUNC int   IMAQ_STDCALL imaqIsWindowVisible(int windowNumber, int* visible);
IMAQ_FUNC int   IMAQ_STDCALL imaqMoveWindow(int windowNumber, Point position);
IMAQ_FUNC int   IMAQ_STDCALL imaqSetupWindow(int windowNumber, int configuration);
IMAQ_FUNC int   IMAQ_STDCALL imaqSetWindowBackground(int windowNumber, WindowBackgroundFillStyle fillStyle, WindowBackgroundHatchStyle hatchStyle, const RGBValue* fillColor, const RGBValue* backgroundColor);
IMAQ_FUNC int   IMAQ_STDCALL imaqSetWindowDisplayMapping(int windowNumber, const DisplayMapping* mapping);
IMAQ_FUNC int   IMAQ_STDCALL imaqSetWindowGrid(int windowNumber, int xResolution, int yResolution);
IMAQ_FUNC int   IMAQ_STDCALL imaqSetWindowMaxContourCount(int windowNumber, unsigned int maxContourCount);
IMAQ_FUNC int   IMAQ_STDCALL imaqSetWindowNonTearing(int windowNumber, int nonTearing);
IMAQ_FUNC int   IMAQ_STDCALL imaqSetWindowPalette(int windowNumber, PaletteType type, const RGBValue* palette, int numColors);
IMAQ_FUNC int   IMAQ_STDCALL imaqSetWindowSize(int windowNumber, int width, int height);
IMAQ_FUNC int   IMAQ_STDCALL imaqSetWindowThreadPolicy(WindowThreadPolicy policy);
IMAQ_FUNC int   IMAQ_STDCALL imaqSetWindowTitle(int windowNumber, const char* title);
IMAQ_FUNC int   IMAQ_STDCALL imaqSetWindowZoomToFit(int windowNumber, int zoomToFit);
IMAQ_FUNC int   IMAQ_STDCALL imaqShowScrollbars(int windowNumber, int visible);
IMAQ_FUNC int   IMAQ_STDCALL imaqZoomWindow2(int windowNumber, float xZoom, float yZoom, Point center);
IMAQ_FUNC const float* IMAQ_STDCALL imaqGetKernel(KernelFamily family, int size, int number);
IMAQ_FUNC Annulus      IMAQ_STDCALL imaqMakeAnnulus(Point center, int innerRadius, int outerRadius, double startAngle, double endAngle);
IMAQ_FUNC Point        IMAQ_STDCALL imaqMakePoint(int xCoordinate, int yCoordinate);
IMAQ_FUNC PointFloat   IMAQ_STDCALL imaqMakePointFloat(float xCoordinate, float yCoordinate);
IMAQ_FUNC Rect         IMAQ_STDCALL imaqMakeRect(int top, int left, int height, int width);
IMAQ_FUNC Rect         IMAQ_STDCALL imaqMakeRectFromRotatedRect(RotatedRect rotatedRect);
IMAQ_FUNC RotatedRect  IMAQ_STDCALL imaqMakeRotatedRect(int top, int left, int height, int width, double angle);
IMAQ_FUNC RotatedRect  IMAQ_STDCALL imaqMakeRotatedRectFromRect(Rect rect);
IMAQ_FUNC int          IMAQ_STDCALL imaqMulticoreOptions(MulticoreOperation operation, unsigned int* customNumCores);
IMAQ_FUNC int   IMAQ_STDCALL imaqCloseToolWindow(void);
IMAQ_FUNC int   IMAQ_STDCALL imaqGetCurrentTool(Tool* currentTool);
IMAQ_FUNC int   IMAQ_STDCALL imaqGetLastEvent(WindowEventType* type, int* windowNumber, Tool* tool, Rect* rect);
IMAQ_FUNC void* IMAQ_STDCALL imaqGetToolWindowHandle(void);
IMAQ_FUNC int   IMAQ_STDCALL imaqGetToolWindowPos(Point* position);
IMAQ_FUNC int   IMAQ_STDCALL imaqIsToolWindowVisible(int* visible);