NIVision/Interop.cs


        [DllImport(libraryPath, EntryPoint = "imaqColorHistogram2", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr imaqColorHistogram2(IntPtr image, int numClasses, ColorMode mode, ref CIEXYZValue whiteReference, IntPtr mask);

        [DllImport(libraryPath, EntryPoint = "imaqColorLookup", CallingConvention = CallingConvention.Cdecl)]
        public static extern int imaqColorLookup(IntPtr dest, IntPtr source, ColorMode mode, IntPtr mask, ref short plane1, ref short plane2, ref short plane3);

        [DllImport(libraryPath, EntryPoint = "imaqColorThreshold", CallingConvention = CallingConvention.Cdecl)]
        public static extern int imaqColorThreshold(IntPtr dest, IntPtr source, int replaceValue, ColorMode mode, ref Range plane1Range, ref Range plane2Range, ref Range plane3Range);

        [DllImport(libraryPath, EntryPoint = "imaqSupervisedColorSegmentation", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr imaqSupervisedColorSegmentation(ref IntPtr session, IntPtr labelImage, IntPtr srcImage, ref ROI roi, ref ROILabel labelIn, uint numLabelIn, int maxDistance, int minIdentificationScore, ref ColorSegmenationOptions segmentOptions);

        [DllImport(libraryPath, EntryPoint = "imaqGetColorSegmentationMaxDistance", CallingConvention = CallingConvention.Cdecl)]
        public static extern int imaqGetColorSegmentationMaxDistance(ref IntPtr session, ref ColorSegmenationOptions segmentOptions, SegmentationDistanceLevel distLevel, ref int maxDistance);

        [DllImport(libraryPath, EntryPoint = "imaqBCGTransform", CallingConvention = CallingConvention.Cdecl)]
        public static extern int imaqBCGTransform(IntPtr dest, IntPtr source, ref BCGOptions options, IntPtr mask);

        [DllImport(libraryPath, EntryPoint = "imaqEqualize", CallingConvention = CallingConvention.Cdecl)]
        public static extern int imaqEqualize(IntPtr dest, IntPtr source, float min, float max, IntPtr mask);

        [DllImport(libraryPath, EntryPoint = "imaqInverse", CallingConvention = CallingConvention.Cdecl)]
        public static extern int imaqInverse(IntPtr dest, IntPtr source, IntPtr mask);

        [DllImport(libraryPath, EntryPoint = "imaqMathTransform", CallingConvention = CallingConvention.Cdecl)]
        public static extern int imaqMathTransform(IntPtr dest, IntPtr source, MathTransformMethod method, float rangeMin, float rangeMax, float power, IntPtr mask);

        [DllImport(libraryPath, EntryPoint = "imaqWatershedTransform", CallingConvention = CallingConvention.Cdecl)]
        public static extern int imaqWatershedTransform(IntPtr dest, IntPtr source, int connectivity8, ref int zoneCount);

        [DllImport(libraryPath, EntryPoint = "imaqLookup2", CallingConvention = CallingConvention.Cdecl)]
        public static extern int imaqLookup2(IntPtr dest, IntPtr source, ref int table, IntPtr mask);

        [DllImport(libraryPath, EntryPoint = "imaqAreScrollbarsVisible", CallingConvention = CallingConvention.Cdecl)]
        public static extern int imaqAreScrollbarsVisible(int windowNumber, ref int visible);

        [DllImport(libraryPath, EntryPoint = "imaqBringWindowToTop", CallingConvention = CallingConvention.Cdecl)]
        public static extern int imaqBringWindowToTop(int windowNumber);

        [DllImport(libraryPath, EntryPoint = "imaqGetMousePos", CallingConvention = CallingConvention.Cdecl)]
        public static extern int imaqGetMousePos(ref Point position, ref int windowNumber);

        [DllImport(libraryPath, EntryPoint = "imaqGetWindowBackground", CallingConvention = CallingConvention.Cdecl)]
        public static extern int imaqGetWindowBackground(int windowNumber, ref WindowBackgroundFillStyle fillStyle, ref WindowBackgroundHatchStyle hatchStyle, ref RGBValue fillColor, ref RGBValue backgroundColor);

        [DllImport(libraryPath, EntryPoint = "imaqGetWindowDisplayMapping", CallingConvention = CallingConvention.Cdecl)]
        public static extern int imaqGetWindowDisplayMapping(int windowNum, ref DisplayMapping mapping);

        [DllImport(libraryPath, EntryPoint = "imaqGetWindowGrid", CallingConvention = CallingConvention.Cdecl)]
        public static extern int imaqGetWindowGrid(int windowNumber, ref int xResolution, ref int yResolution);

        [DllImport(libraryPath, EntryPoint = "imaqGetWindowHandle", CallingConvention = CallingConvention.Cdecl)]
        public static extern int imaqGetWindowHandle(ref int handle);

        [DllImport(libraryPath, EntryPoint = "imaqGetWindowPos", CallingConvention = CallingConvention.Cdecl)]
        public static extern int imaqGetWindowPos(int windowNumber, ref Point position);

        [DllImport(libraryPath, EntryPoint = "imaqGetWindowSize", CallingConvention = CallingConvention.Cdecl)]
        public static extern int imaqGetWindowSize(int windowNumber, ref int width, ref int height);

        [DllImport(libraryPath, EntryPoint = "imaqGetWindowTitle", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr imaqGetWindowTitle(int windowNumber);

        [DllImport(libraryPath, EntryPoint = "imaqGetWindowZoom2", CallingConvention = CallingConvention.Cdecl)]
        public static extern int imaqGetWindowZoom2(int windowNumber, ref float xZoom, ref float yZoom);

        [DllImport(libraryPath, EntryPoint = "imaqIsWindowNonTearing", CallingConvention = CallingConvention.Cdecl)]
        public static extern int imaqIsWindowNonTearing(int windowNumber, ref int nonTearing);

        [DllImport(libraryPath, EntryPoint = "imaqIsWindowVisible", CallingConvention = CallingConvention.Cdecl)]
        public static extern int imaqIsWindowVisible(int windowNumber, ref int visible);

        [DllImport(libraryPath, EntryPoint = "imaqMoveWindow", CallingConvention = CallingConvention.Cdecl)]
        public static extern int imaqMoveWindow(int windowNumber, Point position);

        [DllImport(libraryPath, EntryPoint = "imaqSetupWindow", CallingConvention = CallingConvention.Cdecl)]
        public static extern int imaqSetupWindow(int windowNumber, int configuration);

        [DllImport(libraryPath, EntryPoint = "imaqSetWindowBackground", CallingConvention = CallingConvention.Cdecl)]
        public static extern int imaqSetWindowBackground(int windowNumber, WindowBackgroundFillStyle fillStyle, WindowBackgroundHatchStyle hatchStyle, ref RGBValue fillColor, ref RGBValue backgroundColor);

        [DllImport(libraryPath, EntryPoint = "imaqSetWindowDisplayMapping", CallingConvention = CallingConvention.Cdecl)]
        public static extern int imaqSetWindowDisplayMapping(int windowNumber, ref DisplayMapping mapping);

        [DllImport(libraryPath, EntryPoint = "imaqSetWindowGrid", CallingConvention = CallingConvention.Cdecl)]
        public static extern int imaqSetWindowGrid(int windowNumber, int xResolution, int yResolution);

        [DllImport(libraryPath, EntryPoint = "imaqSetWindowMaxContourCount", CallingConvention = CallingConvention.Cdecl)]
        public static extern int imaqSetWindowMaxContourCount(int windowNumber, uint maxContourCount);

        [DllImport(libraryPath, EntryPoint = "imaqSetWindowNonTearing", CallingConvention = CallingConvention.Cdecl)]
        public static extern int imaqSetWindowNonTearing(int windowNumber, int nonTearing);

        [DllImport(libraryPath, EntryPoint = "imaqSetWindowPalette", CallingConvention = CallingConvention.Cdecl)]
        public static extern int imaqSetWindowPalette(int windowNumber, PaletteType type, ref RGBValue palette, int numColors);

        [DllImport(libraryPath, EntryPoint = "imaqSetWindowSize", CallingConvention = CallingConvention.Cdecl)]
        public static extern int imaqSetWindowSize(int windowNumber, int width, int height);

        [DllImport(libraryPath, EntryPoint = "imaqSetWindowThreadPolicy", CallingConvention = CallingConvention.Cdecl)]
        public static extern int imaqSetWindowThreadPolicy(WindowThreadPolicy policy);

        [DllImport(libraryPath, EntryPoint = "imaqSetWindowTitle", CallingConvention = CallingConvention.Cdecl)]
        public static extern int imaqSetWindowTitle(int windowNumber, [MarshalAs(UnmanagedType.LPStr)] string title);

        [DllImport(libraryPath, EntryPoint = "imaqSetWindowZoomToFit", CallingConvention = CallingConvention.Cdecl)]
        public static extern int imaqSetWindowZoomToFit(int windowNumber, int zoomToFit);

        [DllImport(libraryPath, EntryPoint = "imaqShowScrollbars", CallingConvention = CallingConvention.Cdecl)]
        public static extern int imaqShowScrollbars(int windowNumber, int visible);

        [DllImport(libraryPath, EntryPoint = "imaqZoomWindow2", CallingConvention = CallingConvention.Cdecl)]
        public static extern int imaqZoomWindow2(int windowNumber, float xZoom, float yZoom, Point center);

        [DllImport(libraryPath, EntryPoint = "imaqGetKernel", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr imaqGetKernel(KernelFamily family, int size, int number);

        [DllImport(libraryPath, EntryPoint = "imaqMakeAnnulus", CallingConvention = CallingConvention.Cdecl)]
        public static extern Annulus imaqMakeAnnulus(Point center, int innerRadius, int referRadius, double startAngle, double endAngle);

        [DllImport(libraryPath, EntryPoint = "imaqMakePoint", CallingConvention = CallingConvention.Cdecl)]
        public static extern Point imaqMakePoint(int xCoordinate, int yCoordinate);

        [DllImport(libraryPath, EntryPoint = "imaqMakePointFloat", CallingConvention = CallingConvention.Cdecl)]
        public static extern PointFloat imaqMakePointFloat(float xCoordinate, float yCoordinate);

        [DllImport(libraryPath, EntryPoint = "imaqMakeRect", CallingConvention = CallingConvention.Cdecl)]
        public static extern Rect imaqMakeRect(int top, int left, int height, int width);

        [DllImport(libraryPath, EntryPoint = "imaqMakeRectFromRotatedRect", CallingConvention = CallingConvention.Cdecl)]
        public static extern Rect imaqMakeRectFromRotatedRect(RotatedRect rotatedRect);

        [DllImport(libraryPath, EntryPoint = "imaqMakeRotatedRect", CallingConvention = CallingConvention.Cdecl)]
        public static extern RotatedRect imaqMakeRotatedRect(int top, int left, int height, int width, double angle);

        [DllImport(libraryPath, EntryPoint = "imaqMakeRotatedRectFromRect", CallingConvention = CallingConvention.Cdecl)]
        public static extern RotatedRect imaqMakeRotatedRectFromRect(Rect rect);

        [DllImport(libraryPath, EntryPoint = "imaqMulticoreOptions", CallingConvention = CallingConvention.Cdecl)]
        public static extern int imaqMulticoreOptions(MulticoreOperation operation, ref uint customNumCores);

        [DllImport(libraryPath, EntryPoint = "imaqCloseToolWindow", CallingConvention = CallingConvention.Cdecl)]
        public static extern int imaqCloseToolWindow();

        [DllImport(libraryPath, EntryPoint = "imaqGetCurrentTool", CallingConvention = CallingConvention.Cdecl)]
        public static extern int imaqGetCurrentTool(ref Tool currentTool);

        [DllImport(libraryPath, EntryPoint = "imaqGetLastEvent", CallingConvention = CallingConvention.Cdecl)]
        public static extern int imaqGetLastEvent(ref WindowEventType type, ref int windowNumber, ref Tool tool, ref Rect rect);

        [DllImport(libraryPath, EntryPoint = "imaqGetToolWindowHandle", CallingConvention = CallingConvention.Cdecl)]
        public static extern IntPtr imaqGetToolWindowHandle();

        [DllImport(libraryPath, EntryPoint = "imaqGetToolWindowPos", CallingConvention = CallingConvention.Cdecl)]
        public static extern int imaqGetToolWindowPos(ref Point position);

        [DllImport(libraryPath, EntryPoint = "imaqIsToolWindowVisible", CallingConvention = CallingConvention.Cdecl)]
        public static extern int imaqIsToolWindowVisible(ref int visible);
